[package]
name = "enumrust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
colored = "2"
indicatif = "0.17"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
scraper = "0.13"
anyhow = "1"
serde_json = "1.0"
url = "2.4"
trust-dns-resolver = "0.23"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rayon = "1.7"
tokio-test = "0.4"

